--- a/docs/tutorials/create-custom-application/security/adjusting-webiny-config-ts.mdx
+++ b/docs/tutorials/create-custom-application/security/adjusting-webiny-config-ts.mdx
@@ -2,8 +2,21 @@
 id: adjusting-webiny-config-ts-configuration-file
 title: Adjusting "webiny.config.ts" Configuration File
 sidebar_label: Adjusting "webiny.config.ts" Configuration File
-keywords: ["create", "custom", "application", "graphql", "react", "authentication"]
-description: Learn how to implement authentication in your custom React application.
+keywords:
+  [
+    "create",
+    "custom",
+    "application",
+    "security",
+    "auth",
+    "authentication",
+    "authorization",
+    "cloud",
+    "infrastructure",
+    "adjusting",
+    "webiny.config.ts",
+  ]
+description: Learn how to we can transfer all of the stack output properties that we've previously added in GraphQL API and React application cloud infrastructure code, into our React application.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -11,7 +24,7 @@ import cloudInfraAutoDeploy from "./adding-user-pool-and-user-pool-domain/cloud-
 
 :::tip WHAT YOU’LL LEARN
 
-- how to implement authentication in your custom application
+- how to we can transfer all of the stack output properties that we've added in GraphQL API and React application cloud infrastructure code, into our React application
 
 :::
 
@@ -45,42 +58,42 @@ import { getStackOutput } from "@webiny/cli-plugin-deploy-pulumi/utils";
 // - `project-applications-path/api/pulumi/prod/index.ts`
 
 const API_MAP = {
-    REACT_APP_GRAPHQL_API_URL: "${graphqlApiUrl}",
-    REACT_APP_USER_POOL_REGION: "${region}",
-    REACT_APP_USER_POOL_ID: "${cognitoUserPool.id}",
-    REACT_APP_USER_POOL_DOMAIN: "${cognitoUserPool.domain}",
+  REACT_APP_GRAPHQL_API_URL: "${graphqlApiUrl}",
+  REACT_APP_USER_POOL_REGION: "${region}",
+  REACT_APP_USER_POOL_ID: "${cognitoUserPool.id}",
+  REACT_APP_USER_POOL_DOMAIN: "${cognitoUserPool.domain}",
 };
 
 const APP_MAP = {
-    REACT_APP_USER_POOL_WEB_CLIENT_ID: "${cognitoUserPoolClientId}",
+  REACT_APP_USER_POOL_WEB_CLIENT_ID: "${cognitoUserPoolClientId}",
 };
 
 const NO_ENV_MESSAGE = `Please specify the environment via the "--env" argument, for example: "--env dev".`;
 
 export default {
-    commands: {
-        async watch(options, context) {
-            invariant(options.env, NO_ENV_MESSAGE);
-            Object.assign(process.env, getStackOutput("pinterest-clone/api", options.env, API_MAP));
+  commands: {
+    async watch(options, context) {
+      invariant(options.env, NO_ENV_MESSAGE);
+      Object.assign(process.env, getStackOutput("pinterest-clone/api", options.env, API_MAP));
 
-            // Let's also the user pool client ID and pass it via environment variables too.
-            Object.assign(process.env, getStackOutput("pinterest-clone/app", options.env, APP_MAP));
+      // Let's also the user pool client ID and pass it via environment variables too.
+      Object.assign(process.env, getStackOutput("pinterest-clone/app", options.env, APP_MAP));
 
-            // Starts local application development.
-            await startApp(options, context);
-        },
-        async build(options, context) {
-            invariant(options.env, NO_ENV_MESSAGE);
-            Object.assign(process.env, getStackOutput("pinterest-clone/api", options.env, API_MAP));
-
-            // Let's also the user pool client ID and pass it via environment variables too.
-            Object.assign(process.env, getStackOutput("pinterest-clone/app", options.env, APP_MAP));
-
-            // Creates a production build of your application, ready to be deployed to
-            // a hosting provider of your choice, for example Amazon S3.
-            await buildApp(options, context);
-        },
+      // Starts local application development.
+      await startApp(options, context);
     },
+    async build(options, context) {
+      invariant(options.env, NO_ENV_MESSAGE);
+      Object.assign(process.env, getStackOutput("pinterest-clone/api", options.env, API_MAP));
+
+      // Let's also the user pool client ID and pass it via environment variables too.
+      Object.assign(process.env, getStackOutput("pinterest-clone/app", options.env, APP_MAP));
+
+      // Creates a production build of your application, ready to be deployed to
+      // a hosting provider of your choice, for example Amazon S3.
+      await buildApp(options, context);
+    },
+  },
 };
 ```
 
