--- a/docs/tutorials/create-custom-application/security/conclusion.mdx
+++ b/docs/tutorials/create-custom-application/security/conclusion.mdx
@@ -2,15 +2,25 @@
 id: conclusion
 title: Conclusion
 sidebar_label: Conclusion
-keywords: ["create", "custom", "application", "react", "graphql", "api", "scaffolding"]
-description: Learn how to use the existing Full Stack Application scaffold in order to start building your first custom Webiny application.
+keywords:
+  [
+    "create",
+    "custom",
+    "application",
+    "security",
+    "auth",
+    "authentication",
+    "authorization",
+    "conclusion",
+  ]
+description: A summary of all the steps we took in order to secure our application.
 ---
 
 import CenteredImage from "@components/CenteredImage";
 
 :::tip WHAT YOU’LL LEARN
 
-- how to use the **Full Stack Application** scaffold to start building a new custom application in no time
+- a summary of all the steps we took in order to secure our application
 
 :::
 
