--- a/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-logic.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-logic.mdx
@@ -2,8 +2,21 @@
 id: implementing-authentication-and-authorization-logic
 title: Implementing Authentication and Authorization Logic
 sidebar_label: Implementing Authentication and Authorization Logic
-keywords: ["create", "custom", "application", "graphql", "react", "authentication"]
-description: Learn how to implement authentication in your custom React application.
+keywords:
+  [
+    "create",
+    "custom",
+    "application",
+    "security",
+    "auth",
+    "authentication",
+    "authorization",
+    "graphql",
+    "api",
+    "implementing",
+    "checks",
+  ]
+description: Learn how to implement authentication and authorization checks within our GraphQL API resolver functions.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -15,7 +28,7 @@ import updatePinMutationUpdateWithUser from "./implementing-authentication-and-a
 
 :::tip WHAT YOU’LL LEARN
 
-- how to implement authentication in your custom application
+- how to implement authentication and authorization checks within our GraphQL API resolver functions
 
 :::
 
@@ -57,9 +70,9 @@ So, in this final section of the tutorial, we'll implement the necessary authent
 
 Note that by **sensitive GraphQL mutations**, we mean the following:
 
-  - [`createPin(data: PinCreateInput!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/03-extending-graphql-api/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L53)
-  - [`updatePin(id: ID!, data: PinUpdateInput!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/03-extending-graphql-api/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L56)
-  - [`deletePin(id: ID!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/03-extending-graphql-api/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L59)
+- [`createPin(data: PinCreateInput!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/03-extending-graphql-api/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L53)
+- [`updatePin(id: ID!, data: PinUpdateInput!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/03-extending-graphql-api/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L56)
+- [`deletePin(id: ID!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/03-extending-graphql-api/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L59)
 
 All of the resolver functions for these mutations are located in the [`PinsMutation`](#) class, located in the [`pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/resolvers/PinsMutation.ts`](#) file, and this is where we'll perform all of the changes in the sections that follow.
 
@@ -191,7 +204,10 @@ mutation UpdatePin($id: ID!, $data: PinUpdateInput!) {
 }
 ```
 
-<CenteredImage alt={'"UpdatePin" Mutation - Not Authorized'} src={updatePinMutationCannotUpdateOtherUsersPin} />
+<CenteredImage
+  alt={'"UpdatePin" Mutation - Not Authorized'}
+  src={updatePinMutationCannotUpdateOtherUsersPin}
+/>
 
 To manually test if this really works as intended, while signed-in, we could create a new pin, and then immediately try to update it.
 
