--- a/docs/tutorials/create-custom-application/security/introduction.mdx
+++ b/docs/tutorials/create-custom-application/security/introduction.mdx
@@ -2,17 +2,27 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["create", "custom", "application", "react", "graphql", "api", "scaffolding"]
-description: Learn how to create a custom full stack application, powered by React and a GraphQL API.
+keywords:
+  [
+    "create",
+    "custom",
+    "application",
+    "security",
+    "auth",
+    "authentication",
+    "authorization",
+    "introduction",
+  ]
+description: Get familiar to the fundamental security-related terms like authentication and authorization and how we'll implement these in our custom application.
 ---
 
 import CenteredImage from "@components/CenteredImage";
 
 :::tip WHAT YOU’LL LEARN
 
-- an overview of serverless application development
-- the goal of this tutorial
-- what are the prerequisites that need to be fulfilled in order to follow this tutorial
+- why, at the moment, our application is not secure enough
+- get introduced to the fundamental security-related terms like authentication and authorization
+- the plan we intend to follow in the next couple of sections, in order to make our application secure
 
 :::
 
@@ -74,7 +84,5 @@ Essentially, based on the currently signed-in user, we will determine whether a 
 - signed in users can only update and delete pins that are created by themselves
 
 Ultimately, at any point, users should not be be able to change information that they do not own.
-
-
 
 <!-- Now that we have this brief overview of the authentication flow we're about to use, we can start with the actual implementation. We'll start by making a couple of additions to our cloud infrastructure code, both on the GraphQL API and React application side. Once we have the necessary cloud infrastructure resources deployed, we can then move to application code and connect everything together. -->
