--- a/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -2,8 +2,24 @@
 id: integrating-hosted-ui-authentication-flow
 title: Integrating Hosted UI Authentication Flow
 sidebar_label: Integrating Hosted UI Authentication Flow
-keywords: ["create", "custom", "application", "graphql", "react", "authentication"]
-description: Learn how to implement authentication in your custom React application.
+keywords:
+  [
+    "create",
+    "custom",
+    "application",
+    "security",
+    "auth",
+    "authentication",
+    "authorization",
+    "react",
+    "application",
+    "integrating",
+    "hosted",
+    "ui",
+    "authentication",
+    "flow",
+  ]
+description: Learn how to integrate the Hosted UI authentication flow into our React application.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -16,7 +32,7 @@ import hostedUiVerification from "./integrating-hosted-ui-authentication-flow/ho
 
 :::tip WHAT YOU’LL LEARN
 
-- how to implement authentication in your custom application
+- how to integrate the Hosted UI authentication flow into our React application
 
 :::
 
@@ -118,11 +134,19 @@ As we can see, first we're retrieving the currently signed-in user via the [`use
 
 With all of the previous steps were performed correctly, if we were to click on the **Sign In** button, we should be redirected to the Hosted UI authentication flow, which will initially display the **Sign In** form:
 
-<CenteredImage style={{ maxWidth: 750 }} alt="Hosted UI Authentication Flow - Sign In" src={hostedUiSignIn} />
+<CenteredImage
+  style={{ maxWidth: 750 }}
+  alt="Hosted UI Authentication Flow - Sign In"
+  src={hostedUiSignIn}
+/>
 
 Since this is our first visit, we can click on the **Sign up** link below, which will then take us to the **Sign Up** form:
 
-<CenteredImage style={{ maxWidth: 750 }} alt="Hosted UI Authentication Flow - Sign Up" src={hostedUiSignUp} />
+<CenteredImage
+  style={{ maxWidth: 750 }}
+  alt="Hosted UI Authentication Flow - Sign Up"
+  src={hostedUiSignUp}
+/>
 
 Once we fill all of the fields and submit the form, we should receive the following screen, asking us to enter the verification code that was automatically sent to our e-mail address:
 
@@ -144,6 +168,4 @@ And, by only showing the **&#10753;** icon button to signed-in users, we've rest
 
 But, note that without proper authentication and authorization checks implemented on the GraphQL API side, our application can still be considered as not secure. This is because, at the moment, anonymous users are still able to perform sensitive GraphQL mutations, with just a simple GraphQL client. For example, they can still create new pins via the seen `createPin` mutation, or even delete the existing pins created by other users, via the `deletePin` mutation.
 
-
 So, to make our application even more secure, in the next and final section of this tutorial, we'll implement the necessary authentication and authorization checks on the GraphQL API side.
-
